5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1756_1576.log
== TEST (2019-05-22 15:13:14) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if size(e) == size(b):
	while i != size(e):
		i = i + 1
		s = (e[x] - b[x])
		x = x + 1
		if s > 0:
			ve = ve + 1
		elif s < 0:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
	print(i)
	if ve > vb:
		print("EUSAPIA")
	elif ve < vb:
		print("BARSANULFO")
	else:
		print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:13:49) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if size(e) == size(b):
	while i != size(e):
		i = i + 1
		s = (e[x] - b[x])
		x = x + 1
		if s > 0:
			ve = ve + 1
		elif s < 0:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
	print(i)
	if ve > vb:
		print("EUSAPIA")
	elif ve < vb:
		print("BARSANULFO")
	else:
		print("EMPATE")
		
-- EXECUTION TIME:
0.332653
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:15:31) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- EXECUTION TIME:
0.568056
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:15:34) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:44:02) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:44:25) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:44:47) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:45:11) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:52:36) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:53:13) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
s = 0     #soma
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i != size(e):
	i = i + 1
	s = (e[x] - b[x])
	x = x + 1
	if s > 0:
		ve = ve + 1
	elif s < 0:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:01:01) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i < size(e) or i < size(b) or i < (size(e) and size(b)):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:01:09) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while i < size(e) or i < size(b) or i < (size(e) and size(b)):
-- ERROR:
File "XXXX", line 11
    
                                                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:01:49) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
-- ERROR:
File "XXXX", line 11
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:03:40) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
	str(11) = "Pedra"
	str(22) = "Papel"
	str(33) = "Tesoura"
-- ERROR:
File "XXXX", line 11
    str(11) = "Pedra"
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:03:58) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
	11 = "Pedra"
	22 = "Papel"
	33 = "Tesoura"
-- ERROR:
File "XXXX", line 11
    11 = "Pedra"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:07:44) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:09:09) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:09:43) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:13:49) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
if (size(e) == 1) or (size(b) == 1):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:14:05) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
if (size(e) == 1) or (size(b) == 1):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:16:32) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
if (e == 1) or (b == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)) or (i < (size(e) and size(b))):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:31) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e == 1) or (b == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)) or (((i < size(e)) and (i < size(b))):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 18
    while (i < size(e)) or (i < size(b)) or (((i < size(e)) and (i < size(b))):
                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:41) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e == 1) or (b == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)) or ((i < size(e)) and (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 18
    while (i < size(e)) or (i < size(b)) or ((i < size(e)) and (i < size(b)):
                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:46) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e == 1) or (b == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)) or ((i < size(e)) and (i < size(b))):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:20:28) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e == 1) or (b == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:20:54) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (size(e) == 1) or (size(b) == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:21:05) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (size(e) == 1) or (size(b) == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:22:16) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[1] == 1) or (b[1] == 1):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
	i = 1
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:22:23) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[1] == 0) or (b[1] == 0):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
	i = 1
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:23:17) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[1] == 0) or (b[1] == 0):
	if e > b:
		ve = 1
	elif e < b:
		vb = 1
	else:
		ve = vb
	i = 1
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:25:06) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[1] == 0) or (b[1] == 0):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:25:18) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[1] == 0) or (b[1] == 0):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.359209
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:37:46) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[1] == 0) or (b[1] == 0):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
	if e[x] == 11:
		e[x] = "Pedra"
	elif e[x] == 22:
		e[x] = "Papel"
	else:
		e[x] = "Tesoura"
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:42:01) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (size == 0) or (b[1] == 0):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
	if e[x] == 11:
		e[x] = "Pedra"
	elif e[x] == 22:
		e[x] = "Papel"
	else:
		e[x] = "Tesoura"
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:42:22) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (e[0] == 0) or (b[1] == 0):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
	if e[x] == 11:
		e[x] = "Pedra"
	elif e[x] == 22:
		e[x] = "Papel"
	else:
		e[x] = "Tesoura"
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:42:56) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

if (size(e) == 1) or (size(b) == 1):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
	if e[x] == 11:
		e[x] = "Pedra"
	elif e[x] == 22:
		e[x] = "Papel"
	else:
		e[x] = "Tesoura"
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:44:01) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

if (size(e) == 1) or (size(b) == 1):
	if e[0] > b[0]:
		ve = 1
	elif e[0] < b[0]:
		vb = 1
	else:
		ve = vb
	i = 1
	if e[x] == 11:
		e[x] = "Pedra"
	elif e[x] == 22:
		e[x] = "Papel"
	else:
		e[x] = "Tesoura"
else:
	while (i < size(e)) or (i < size(b)):
		i = i + 1
		if e[x] > b[x]:
			ve = ve + 1
		elif e[x] < b[x]:
			vb = vb + 1
		else:
			vb = vb
			ve = ve
		x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:45:19) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:45:31) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.530244
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:51:36) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:51:45) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:55:40) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	if e[x] == 11:
		e[x] = p
	elif e[x] == 22:
		e[x] = a
	elif e[x] == 33:
		e[x] = t
	if b[x] == 11:
		b[x] = p
	elif b[x] == 22:
		b[x] = a
	elif b[x] == 33:
		b=[x] = t
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:56:29) 
-- CODE:
from numpy import*
e = (array(eval(input("sequencia de Eusapia: "))))
b = (array(eval(input("sequencia de Barsanulfo: "))))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	if e[x] == 11:
		e[x] = p
	elif e[x] == 22:
		e[x] = a
	elif e[x] == 33:
		e[x] = t
	if b[x] == 11:
		b[x] = p
	elif b[x] == 22:
		b[x] = a
	elif b[x] == 33:
		b=[x] = t
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:56:43) 
-- CODE:
from numpy import*
e = str(array(eval(input("sequencia de Eusapia: "))))
b = str(array(eval(input("sequencia de Barsanulfo: "))))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo
p = "pedra"
a = "papel"
t = "tesoura"

while (i < size(e)) or (i < size(b)):
	if e[x] == 11:
		e[x] = p
	elif e[x] == 22:
		e[x] = a
	elif e[x] == 33:
		e[x] = t
	if b[x] == 11:
		b[x] = p
	elif b[x] == 22:
		b[x] = a
	elif b[x] == 33:
		b=[x] = t
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:59:24) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:59:55) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.494736
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:40:27) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:40:40) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:40:57) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:50:53) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:50:58) 
-- CODE:
from numpy import*
e = array(eval(input("sequencia de Eusapia: ")))
b = array(eval(input("sequencia de Barsanulfo: ")))

i = 0     #indice
x = 0     #elemento no vetor
ve = 0    #pontos eusabia
vb = 0    #pontos barsanulfo

while (i < size(e)) or (i < size(b)):
	i = i + 1
	if e[x] > b[x]:
		ve = ve + 1
	elif e[x] < b[x]:
		vb = vb + 1
	else:
		vb = vb
		ve = ve
	x = x + 1
print(i)
if ve > vb:
	print("EUSAPIA")
elif ve < vb:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.474547
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
